Vista cliente - rest: ajustes + view binding + recycler

--- a/app/src/main/res/layout/item_producto.xml
+++ b/app/src/main/res/layout/item_producto.xml
@@ -1,54 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:elevation="4dp"
-    android:backgroundTint="@android:color/white"
-    android:radius="20dp">
+    android:layout_marginHorizontal="8dp"
+    android:layout_marginVertical="12dp"
+    app:cardCornerRadius="16dp"
+    app:cardElevation="4dp"
+    android:backgroundTint="@color/white"
+    app:strokeColor="@color/gray_light">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:gravity="center"
+        android:foreground="?attr/selectableItemBackground">
 
         <!-- Imagen del producto -->
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/productImage"
             android:layout_width="match_parent"
             android:layout_height="120dp"
+            android:contentDescription="@string/imgProduct"
+            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.RoundedCorners16dp"
+            android:padding="8dp"
             android:scaleType="centerCrop" />
 
         <!-- Nombre del producto -->
         <TextView
             android:id="@+id/productName"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Nombre del producto"
+            android:text="@string/nameProduct"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:fontFamily="@font/sen_font"
+            android:layout_margin="4dp"
+            android:ellipsize="end"
+            android:maxLines="1"/>
 
         <!-- Precio del producto -->
         <TextView
             android:id="@+id/productPrice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="$0.00"
-            android:textSize="14sp"
-            android:textColor="@android:color/holo_red_dark" />
-
-        <!-- Indicador de "Agotado" (opcional) -->
-        <TextView
-            android:id="@+id/productStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="@android:color/holo_red_dark"
-            android:visibility="gone" />
+            android:text="@string/priceProduct"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_margin="4dp"
+            android:textColor="@color/btn_dark" />
+
+        <!-- Indicador de "Agotado" (opcional) -->
+<!--        <TextView-->
+<!--            android:id="@+id/productStatus"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:gravity="center"-->
+<!--            android:textColor="@android:color/holo_red_dark"-->
+<!--            android:visibility="gone" />-->
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+
+</com.google.android.material.card.MaterialCardView>
 
