--- a/app/src/main/res/layout/activity_cliente_producto.xml
+++ b/app/src/main/res/layout/activity_cliente_producto.xml
@@ -62,7 +62,7 @@
                     android:layout_alignTop="@id/btnCart"
                     android:layout_alignEnd="@id/btnCart"
                     android:background="@drawable/circle_bg"
-                    android:text="0"
+                    android:text="@string/cantProducts"
                     android:textColor="@android:color/white"
                     android:textSize="6sp"
                     android:padding="4dp" />
