--- a/app/src/main/res/layout/activity_cliente_restaurante.xml
+++ b/app/src/main/res/layout/activity_cliente_restaurante.xml
@@ -1,164 +1,219 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg_color"
     tools:context=".activity.cliente.ClienteRestauranteActivity">
 
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_vertical">
-
-        <!-- Imagen del restaurante -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <!-- Imagen del restaurante -->
-            <ImageView
-                android:id="@+id/ivRestaurantImage"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:scaleType="centerCrop"/>
-
-            <!-- Botón de regresar (flecha) -->
-            <Button
-                style="?attr/materialIconButtonFilledTonalStyle"
-                android:id="@+id/btnBack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_margin="16dp"
-                app:icon="@drawable/baseline_arrow_back_ios_new_24"
-                android:contentDescription="regresar"/>
-
-            <!-- Botón de carrito de compras -->
-            <Button
-                style="?attr/materialIconButtonFilledStyle"
-                android:id="@+id/btnCart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_margin="16dp"
-                app:icon="@drawable/outline_shopping"
-                android:contentDescription="carrito"/>
-
-            <!-- Indicador de cantidad en el carrito -->
-            <TextView
-                android:id="@+id/tvCartItemCount"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_alignTop="@id/btnCart"
-                android:layout_alignEnd="@id/btnCart"
-                android:background="@drawable/circle_bg"
-                android:text="0"
-                android:textColor="@android:color/white"
-                android:textSize="6sp"
-                android:padding="4dp" />
-        </RelativeLayout>
-
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="8dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <!-- Nombre del restaurante (extremo izquierdo) -->
-            <TextView
-                android:id="@+id/tvRestaurantName"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="26sp"
-                android:textStyle="bold" />
+            <!-- Botones con imagen del restaurante -->
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <!-- Calificación del restaurante (extremo derecho) -->
-            <TextView
-                android:id="@+id/tvRestaurantRating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_star"
-                android:textSize="18sp" />
-        </LinearLayout>
+                <!-- Imagen del restaurante -->
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/ivRestaurantImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:contentDescription="@string/imgRest"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/restaurant_image"
+                    app:shapeAppearanceOverlay="@style/RoundedBottomCornersShape"
+                    android:alpha="0.95"/>
 
 
-        <!-- Descipción del restaurante -->
-        <TextView
-            android:id="@+id/tvDescripcionRest"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="Restaurante especializado en hamburguesas artesanales, donde la calidad de los ingredientes y el sabor único se combinan para ofrecer una experiencia culinaria inigualable. Desde las clásicas hasta creaciones gourmet, cada hamburguesa es preparada al momento, acompañada de papas crujientes y una selección de salsas caseras."
-            android:textAlignment="viewStart"
-            android:textAllCaps="false"
-            android:layout_marginBottom="6dp"/>
-
-        <!-- Categorías de productos -->
-        <HorizontalScrollView
-            android:id="@+id/hsvCategories"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars="none"
-            android:fillViewport="true">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingHorizontal="8dp">
-
-                <!-- Botones con las categorías -->
+                <!-- Botón de regresar (flecha) -->
                 <Button
+                    android:id="@+id/btnBack"
                     style="?attr/materialIconButtonFilledStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingHorizontal="18dp"
-                    android:text="Todas" />
+                    android:layout_alignParentStart="true"
+                    android:layout_margin="16dp"
+                    android:contentDescription="@string/btnBack"
+                    app:icon="@drawable/baseline_arrow_back_ios_new_24"
+                    app:iconTint="@color/black"
+                    android:backgroundTint="@color/bg_color"/>
 
+                <!-- Botón de carrito de compras -->
                 <Button
-                    style="?attr/materialIconButtonFilledTonalStyle"
+                    android:id="@+id/btnCart"
+                    style="?attr/materialIconButtonFilledStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingHorizontal="18dp"
-                    android:text="Hamburguesa" />
+                    android:layout_alignParentEnd="true"
+                    android:layout_margin="16dp"
+                    android:contentDescription="@string/btnCarrito"
+                    app:icon="@drawable/outline_shopping"
+                    android:backgroundTint="@color/black"/>
 
-                <Button
-                    style="?attr/materialIconButtonFilledTonalStyle"
+                <!-- Indicador de cantidad en el carrito -->
+                <TextView
+                    android:id="@+id/tvCartItemCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingHorizontal="18dp"
-                    android:text="Pizza" />
+                    android:layout_alignTop="@id/btnCart"
+                    android:layout_alignEnd="@id/btnCart"
+                    android:background="@drawable/circle_bg"
+                    android:text="@string/cantProducts"
+                    android:textColor="@android:color/white"
+                    android:textSize="12sp"
+                    android:gravity="center"
+                    android:paddingHorizontal="4dp"
+                    android:minWidth="16dp"
+                    android:minHeight="16dp"/>
 
-                <Button
-                    style="?attr/materialIconButtonFilledTonalStyle"
+            </RelativeLayout>
+
+            <!-- Encabezado del restaurante -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:paddingHorizontal="16dp"
+                android:layout_marginTop="8dp">
+
+                <!-- Nombre del restaurante -->
+                <TextView
+                    android:id="@+id/tvRestaurantName"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/nameRest"
+                    android:fontFamily="@font/sen_font"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black" />
+
+                <!-- Calificación del restaurante -->
+                <TextView
+                    android:id="@+id/tvRestaurantRating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingHorizontal="18dp"
-                    android:text="Sandwich" />
+                    android:text="@string/rateRest"
+                    android:gravity="center"
+                    android:fontFamily="@font/sen_font"
+                    android:drawablePadding="4dp"
+                    android:textSize="16sp"
+                    app:drawableStartCompat="@drawable/ic_star"
+                    android:textColor="@color/gray" />
 
+                <!-- Botón de favorito -->
                 <Button
-                    style="?attr/materialIconButtonFilledTonalStyle"
+                    android:id="@+id/btnFavorite"
+                    style="?attr/materialIconButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingHorizontal="18dp"
-                    android:text="Salchipapa" />
+                    android:layout_marginStart="8dp"
+                    android:contentDescription="@string/btnFavorite"
+                    app:icon="@drawable/ic_favorite_border"
+                    app:iconTint="@color/btn_medium"/>
 
             </LinearLayout>
-        </HorizontalScrollView>
+
+
+            <!-- Descipción del restaurante -->
+            <TextView
+                android:id="@+id/tvDescripcionRest"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="16dp"
+                android:textSize="14sp"
+                android:text="@string/descripcionRest"
+                android:textAlignment="viewStart"
+                android:layout_marginVertical="8dp"/>
+
+            <!-- Categorías de productos -->
+            <HorizontalScrollView
+                android:id="@+id/hsvCategories"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="none"
+                android:fillViewport="true">
+
+                <!-- Botones con las categorías -->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingHorizontal="16dp"
+                    android:layout_marginTop="16dp">
+
+                    <Button
+                        style="?attr/materialIconButtonFilledStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="18dp"
+                        android:text="@string/todas"
+                        android:fontFamily="@font/sen_font"
+                        android:textStyle="bold"
+                        android:backgroundTint="@color/btn_dark"/>
+
+                    <Button
+                        style="?attr/materialIconButtonFilledTonalStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="18dp"
+                        android:fontFamily="@font/sen_font"
+                        android:text="@string/nombreCategoria"
+                        android:backgroundTint="@color/btn_light"/>
+
+                    <Button
+                        style="?attr/materialIconButtonFilledTonalStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="18dp"
+                        android:text="@string/nombreCategoria"
+                        android:fontFamily="@font/sen_font"
+                        android:backgroundTint="@color/btn_light"/>
+
+                    <Button
+                        style="?attr/materialIconButtonFilledTonalStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="18dp"
+                        android:text="@string/nombreCategoria"
+                        android:fontFamily="@font/sen_font"
+                        android:backgroundTint="@color/btn_light"/>
+
+                    <Button
+                        style="?attr/materialIconButtonFilledTonalStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingHorizontal="18dp"
+                        android:text="@string/nombreCategoria"
+                        android:fontFamily="@font/sen_font"
+                        android:backgroundTint="@color/btn_light"/>
+                </LinearLayout>
+            </HorizontalScrollView>
 
 
 
-        <!-- Lista de productos (RecyclerView) -->
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvProducts"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"/>
+            <!-- Lista de productos (RecyclerView) -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvProducts"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="false"
+                android:padding="16dp"/>
+        </LinearLayout>
 
-    </LinearLayout>
-</ScrollView>
+
+
+    </androidx.core.widget.NestedScrollView>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
