Vista admini - home: ajustes + view binding

--- a/app/src/main/res/layout/activity_admin_res_carta.xml
+++ b/app/src/main/res/layout/activity_admin_res_carta.xml
@@ -23,7 +23,7 @@
 
             <!-- Icono de perfil -->
             <Button
-                android:id="@+id/btnProfile"
+                android:id="@+id/btnBack"
                 style="?attr/materialIconButtonFilledTonalStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
