--- a/app/src/main/res/layout/activity_superadmin_main.xml
+++ b/app/src/main/res/layout/activity_superadmin_main.xml
@@ -5,45 +5,35 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFF0F0"
     tools:context=".activity.superadmin.SuperadminMainActivity">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="29dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp"
-            tools:ignore="MissingConstraints">
+            android:padding="16dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+            <ImageView
+                android:id="@+id/ivLogoFoodisea"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
                 android:layout_marginBottom="16dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <!-- Logo Foodisea -->
-                <ImageView
-                    android:id="@+id/ivLogoFoodisea"
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/foodisea" />
-            </LinearLayout>
+                app:srcCompat="@drawable/foodisea" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
                 android:text="Hey *Admin NAME*, ¡Buen Día!"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -56,7 +46,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:layout_weight="1"
-                    android:background="#F0F0F0"
+                    android:background="@drawable/rounded_background"
                     android:orientation="vertical"
                     android:padding="16dp">
 
@@ -71,14 +61,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="RESTAURANTES\nREGISTRADOS"
-                        android:textSize="14sp" />
+                        android:textSize="12sp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:background="#F0F0F0"
+                    android:background="@drawable/rounded_background"
                     android:orientation="vertical"
                     android:padding="16dp">
 
@@ -93,7 +83,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="REPARTIDORES\nACTIVOS"
-                        android:textSize="14sp" />
+                        android:textSize="12sp" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -101,7 +91,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
-                android:background="#F0F0F0"
+                android:background="@drawable/rounded_background"
                 android:orientation="vertical"
                 android:padding="16dp">
 
@@ -123,10 +113,8 @@
                         android:layout_weight="1" />
 
                     <Spinner
-                        style="@style/CustomSpinnerStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/custom_spinner_background"
                         android:entries="@array/period_options" />
 
                     <TextView
@@ -148,7 +136,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/ic_profile" />
+                    android:src="@drawable/sales_graph" />
             </LinearLayout>
 
             <LinearLayout
@@ -186,7 +174,7 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:src="@drawable/ic_star"
-                    android:tint="#FF5722" />
+                    app:tint="#FF5722" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -218,31 +206,53 @@
 
                 <View
                     android:layout_width="0dp"
-                    android:layout_height="66dp"
+                    android:layout_height="88dp"
                     android:layout_marginEnd="8dp"
                     android:layout_weight="1"
-                    android:background="#E0E0E0" />
+                    android:background="@drawable/rounded_background" />
 
                 <View
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="#E0E0E0" />
+                    android:background="@drawable/rounded_background" />
             </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigation"
+    <!-- Bottom Navigation -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="@drawable/bottom_navigation_background"
-        app:menu="@menu/bottom_navigation_menu"
-        app:labelVisibilityMode="unlabeled"
-        app:itemIconTint="@color/bottom_nav_icon_color"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:orientation="horizontal"
+        android:background="@drawable/rounded_background"
+        android:padding="16dp"
+        app:layout_constraintBottom_toBottomOf="parent">
 
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="31dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_dashboard" />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="31dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_list" />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="31dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_notifications" />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="31dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_profile" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
